src-tauri/tests/snapshots/pipeline_scenarios__user_prompt_with_custom_tag_attachment.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: user
  id: msg-1
  content_length: 3
  content:
    - type: text
      text: "look at "
    - type: custom-tag-mention
      label: Pasted ticket
      submit_text_length: 24
      submit_text_preview: "--PASTED--TICKET--BODY--"
      kind: text
    - type: text
      text: " and fix it"
  status: ~
  streaming: ~
